--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Max's Bootstrap Ripoff</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,9 +53,9 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+          <h1 class="mx-auto my-0 text-uppercase">Max Jann</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">A passionate, clever, and diligent software engineer.</h2>
+          <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
         </div>
       </div>
     </header>
@@ -65,9 +65,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <h2 class="text-white mb-4">Personal Projects</h2>
+            <p class="text-white-50">I have made a social media website to emulate facebook, then I made a fantasy football website to emulate espn.  I've created
+              <a href="http://startbootstrap.com/template-overviews/grayscale/">my own game studio</a>. I've made 2D platformers, 3D first person shooters, flying games and adventure games.</p>
           </div>
         </div>
         <img src="img/ipad.png" class="img-fluid" alt="">
