linked to itch.io

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-
+<!-- To all who read code:  I don't like using things I don't understand, but I'm going to build off of this bootstrap as an experiment to learn more about professional web design -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -67,7 +67,7 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Personal Projects</h2>
             <p class="text-white-50">I have made a social media website to emulate facebook, then I made a fantasy football website to emulate espn.  I've created
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">my own game studio</a>. I've made 2D platformers, 3D first person shooters, flying games and adventure games.</p>
+              <a href="https://codejoy-wins.itch.io/">my own game studio</a>. I've made 2D platformers, 3D first person shooters, flying games and adventure games.</p>
           </div>
         </div>
         <img src="img/ipad.png" class="img-fluid" alt="">
