--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Over</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -81,12 +81,15 @@
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+            <a href="http://18.222.207.191/">
+              <img class="img-fluid mb-3 mb-lg-0" src="./img/wff.png" alt="westlake fantasy football app">
+            </a>
+            
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <h4>Westlake Fantasy Football Website</h4>
+              <p class="text-black-50 mb-0">My pride and joy.  Made with Django/Python, hosted by AWS</p>
             </div>
           </div>
         </div>
@@ -94,14 +97,16 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+            <a href="https://youtu.be/ZlEHs1wBGlQ">
+              <img class="img-fluid" src="./img/fb.png" alt="fakebook photo">            
+            </a>
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                  <h4 class="text-white">Fakebook</h4>
+                  <p class="mb-0 text-white-50">The first thing I wanted to build after bootcamp.  My own version of facebook.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -112,14 +117,16 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+            <a href="https://codejoy-wins.itch.io/mad-portfolio">
+              <img class="img-fluid" src="./img/mad.png" alt="Mad Portfolio">
+            </a>
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <h4 class="text-white">Interactive Portfolio</h4>
+                  <p class="mb-0 text-white-50">Another project I wanted to make coming out of the bootcamp was an interactive 3D flying resume</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
@@ -161,7 +168,7 @@
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Address</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                <div class="small text-black-50">513 E Orange Grove, Burbank CA</div>
               </div>
             </div>
           </div>
@@ -173,7 +180,7 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">maxwellljann@gmail.com</a>
                 </div>
               </div>
             </div>
@@ -185,20 +192,20 @@
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
+                <div class="small text-black-50">+1 (805) 862-7047</div>
               </div>
             </div>
           </div>
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
+          <a href="https://twitter.com/real_jann" class="mx-2">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://www.facebook.com/maxwell.jann.3" class="mx-2">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://github.com/codejoy-wins" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -209,7 +216,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        Copyright &copy; Jann Software 2019
       </div>
     </footer>
 
