--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#target">Contact</a>
             </li>
           </ul>
         </div>
@@ -193,7 +193,7 @@
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (805) 862-7047</div>
+                <div class="small text-black-50" id="target">+1 (805) 862-7047</div>
               </div>
             </div>
           </div>
