trying to get a decent png

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a href="https://codejoy-wins.itch.io/">my own game studio</a>. I've made 2D platformers, 3D first person shooters, flying games and adventure games.</p>
           </div>
         </div>
-        <img src="img/ipad.png" class="img-fluid" alt="">
+        <img src="./img/hero.png" class="img-fluid" alt="Jann Software Logo" id="fire">
       </div>
     </section>
 
