--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" href="./css/additional.css">
 
 <!-- I have tried and failed to change the font of my name -->
     <!-- Custom styles for this template -->
@@ -208,6 +209,9 @@
           </a>
           <a href="https://github.com/codejoy-wins" class="mx-2">
             <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/maxjann/" class="mx-2">
+            <i class="fab featured-text">LI</i>
           </a>
         </div>
 
