--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Personal Projects</h2>
+            <h2 class="text-white mb-4">Jann Software</h2>
             <p class="text-white-50">I have made a social media website to emulate facebook, then I made a fantasy football website to emulate espn.  I've created
               <a href="https://codejoy-wins.itch.io/">my own game studio</a>. I've made 2D platformers, 3D first person shooters, flying games and adventure games.</p>
           </div>
