--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Max's Bootstrap Ripoff</title>
+    <title>Standing on the Bootstraps of Giants</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,9 @@
               <a href="https://codejoy-wins.itch.io/">my own game studio</a>. I've made 2D platformers, 3D first person shooters, flying games and adventure games.</p>
           </div>
         </div>
+        <h2><a href="https://lichess.org/@/codejoy/perf/blitz">1768 ELO Chess Rating</a> </h2>
         <img src="./img/hero.png" class="img-fluid" alt="Jann Software Logo" id="fire">
+        <h2><a href="https://www.khanacademy.org/profile/maxjann/">2,110,583 Energy Points on </a>khanacademy</h2>
       </div>
     </section>
 
