--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Address</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">513 E Orange Grove, Burbank CA</div>
+                <div class="small text-black-50">Burbank CA</div>
               </div>
             </div>
           </div>
