--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Fakebook</h4>
-                  <p class="mb-0 text-white-50">The first thing I wanted to build after bootcamp.  My own version of facebook.</p>
+                  <p class="mb-0 text-white-50">The first thing I wanted to build after <a href="https://www.codingdojo.com/">bootcamp</a>.  My own version of facebook.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -131,7 +131,7 @@
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
                   <h4 class="text-white">Interactive Portfolio</h4>
-                  <p class="mb-0 text-white-50">Another project I wanted to make coming out of the bootcamp was an interactive 3D flying resume</p>
+                  <p class="mb-0 text-white-50">Another project I wanted to make coming out of the <a href="https://www.codingdojo.com/">bootcamp</a> was an <a href="https://codejoy-wins.itch.io/mad-portfolio">interactive 3D flying resume</a></p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
