og portfolio link

--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
           <a href="https://www.linkedin.com/in/maxjann/" class="mx-2">
             <i class="fab featured-text">LI</i>
           </a>
+          <a href="https://www.maxjann.com/" class="mx-2">
+            <i class="fab featured-text">OG</i>
+          </a>
         </div>
 
       </div>
