--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
           <a href="https://pensive-lumiere-228b4a.netlify.com/alien.html" class="mx-2">
             <i class="fab featured-text">DJ</i>
           </a>
+          <a href="https://docs.google.com/document/d/1mQzoxGCvjgC9mTTLTStEfh_nOdcLHX48EyX-f9WLQMc/edit?usp=sharing" class="mx-2">
+            <i class="fab featured-text">CV</i>
+          </a>
         </div>
 
       </div>
