linked to old portfolio
switched names of links and paths

--- a/index.html
+++ b/index.html
@@ -217,13 +217,16 @@
             <i class="fab featured-text">LI</i>
           </a>
           <a href="https://www.maxjann.com/" class="mx-2">
-            <i class="fab featured-text">OG</i>
+            <i class="fab featured-text">MJ</i>
           </a>
           <a href="https://pensive-lumiere-228b4a.netlify.com/alien.html" class="mx-2">
             <i class="fab featured-text">DJ</i>
           </a>
           <a href="https://docs.google.com/document/d/1mQzoxGCvjgC9mTTLTStEfh_nOdcLHX48EyX-f9WLQMc/edit?usp=sharing" class="mx-2">
             <i class="fab featured-text">CV</i>
+          </a>
+          <a href="https://determined-ardinghelli-657d6e.netlify.com/" class="mx-2">
+            <i class="fab featured-text">OG</i>
           </a>
         </div>
 
